OWL-4188 Forums: Removed warning styles from page title headings and fixed spacing for topic block

--- a/msgcntr/messageforums-app/src/webapp/css/msgcntr.css
+++ b/msgcntr/messageforums-app/src/webapp/css/msgcntr.css
@@ -59,7 +59,9 @@
 .topicBloc td td{
 	padding-left: 0;
 }
-
+.topicBlocLone td {
+	padding: 0;
+}
 .singleMessage .title, .singleMessageReply .title, .topicBloc .title,.pendingApproval .title{
 	/*	title for all the above cases*/
 	font-weight: bold;
